@@ -1,6 +1,10 @@
 #-*- mode: org -*-
 #
 * Version 1.2.5 <2018-05-18 Wed>
+  - New vignettes started 
+    - phreg robust se's for marginal Cox model
+    - twostage survival  model 
+    - multivariate competing risks 
   - logitSurv for fitting semiparametric proportional odds model 
     - gof 
     - robust standard errors for clustered case 
